terraform/manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: descriptor-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: descriptor-frontend
  template:
    metadata:
      labels:
        app: descriptor-frontend
    spec:
      containers:
      - name: descriptor-frontend
        image: rafaelmanzanom/descriptor-frontend:v1
        ports:
        - containerPort: 80
