terraform/manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: descriptor-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
